--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             <li><a href="#articulo2">Artículo 2</a></li>
             <li><a href="#articulo3">Artículo 3</a></li>
         </ul>
+        <br>
+        <a href="feed-rss.xml" target="_blank">RSS</a>
     </nav>
     <hr>
     <section id="articulo1">
