--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>Blog de Viajes</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="alternative" type="application/rss+xml" href="feed-rss.xml">
 </head>
 <body>
     <nav>
@@ -15,24 +16,23 @@
         <br>
         <a href="feed-rss.xml" target="_blank">RSS</a>
     </nav>
-    <hr>
+
     <section id="articulo1">
         <h2>Artículo 1: "Los mejores destinos para unas vacaciones de ensueño"</h2>
         <p>Fecha de publicación: 15 de marzo de 2023</p>
         <p>Contenido del artículo 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </section>
-    <hr>
+
     <section id="articulo2">
         <h2>Artículo 2: "Descubriendo la cultura local en tus viajes"</h2>
         <p>Fecha de publicación: 22 de marzo de 2023</p>
         <p>Contenido del artículo 2 Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </section>
-    <hr>
+
     <section id="articulo3">
         <h2>Artículo 3: "Consejos para viajar de forma económica"</h2>
         <p>Fecha de publicación: 29 de marzo de 2023</p>
         <p>Contenido del artículo 3 Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </section>
-    <hr>
 </body>
 </html>
